Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/errors/TestParseErrors/ParseErrors.java
/* /nodynamiccopyright/ */
import java.util.List;
import java.util.Vector;

class test {

    public String m(List<? extends String> v, String s ) {
        return null;
    }

    public String m2(Vector<String> vs, String s) {
        return null;
    }

    public void m3(testclass<String>,
}

class testclass<T> {
    T t;
}
